tests/reject/adhoc.lc

data A = A

x = oneComp :: Vec 4 A

main = x    -- TODO: catch error at application


